--- a/config/config.yaml
+++ b/config/config.yaml
@@ -2,7 +2,7 @@ port: "8080"
 
 mongo:
   uri: "mongodb://user:password@mongo:27017/"
-  name: "development"
+  db_name: "development"
   workout_collection: "workouts"
   achievement_collection: "achievements"
   goal_collection: "goals"
